coffeeshop/base/backend/product-service-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  annotations:
  name: product-service
  labels:
    app.kubernetes.io/component: product-service
    app.kubernetes.io/instance: product-service
    app.kubernetes.io/name: product-service
    app.kubernetes.io/part-of: product-backend
    app.openshift.io/runtime: quarkus
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/target: '100'
        autoscaling.knative.dev/targetUtilizationPercentage: '70'
        autoscaling.knative.dev/window: 60s
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: product-service
        app.kubernetes.io/instance: product-service
        app.kubernetes.io/name: product-service
        app.kubernetes.io/part-of: product-backend
        app.openshift.io/runtime: quarkus
    spec:
      containerConcurrency: 0
      containers:
        - image: >-
            image-registry.openshift-image-registry.svc:5000/coffeeshop-pipeline/product-service
          imagePullPolicy: Always
          name: product-service
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            successThreshold: 1
            tcpSocket:
              port: 0
          resources: {}
      enableServiceLinks: false
      timeoutSeconds: 300
  traffic:
    - latestRevision: true
      percent: 100
