coffeeshop/base/backend/product-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: product-service
    app.kubernetes.io/part-of: product-backend
  name: product-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: product-service
status:
  loadBalancer: {}
