coffeeshop/base/backend/product-service-route.yaml
apiVersion: serving.knative.dev/v1
kind: Route
metadata:
  name: product-service
  ownerReferences:
    - apiVersion: serving.knative.dev/v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: product-service
      uid: b7626185-8922-49a0-b303-9de4af196fd2
  finalizers:
    - routes.serving.knative.dev
  labels:
    app.kubernetes.io/component: product-service
    app.kubernetes.io/instance: product-service
    app.kubernetes.io/name: product-service
    app.kubernetes.io/part-of: product-backend
    app.openshift.io/runtime: quarkus
    app.openshift.io/runtime-version: 0.0.1
    serving.knative.dev/service: product-service
spec:
  traffic:
    - configurationName: product-service
      latestRevision: true
      percent: 100
